--- a/introduction.tex
+++ b/introduction.tex
@@ -2,9 +2,9 @@
 
 \chapter{Introduction}\label{ch:introduction}
 
-This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition appears is in headless relatives, i.e. relative clauses that lack a head.
+This dissertation is about case competition, a situation in which two cases are assigned but only one of them surfaces. One of the constructions in which case competition takes place is in headless relatives, i.e. relative clauses that lack a head.
 
-This dissertation attempts to achieve two goals. The first one is to give an overview of the data. I show which aspects are crosslinguistically stable, which differ across languages, and whether all logically possible patterns are attested. My second goal is to provide an account for the observed data. I set up a proposal that generates the attested patterns and excludes the non-attested ones. Moreover, the variation between languages follows from properties within languages that can be independently observed.
+This dissertation attempts to achieve two goals. The first one is to give an overview of the data. I show which aspects of case competition in headless relatives are crosslinguistically stable, which differ across languages, and whether all logically possible patterns are attested. My second goal is to provide an account for the observed data. I set up a proposal that generates the attested patterns and excludes the non-attested ones. Moreover, the variation between languages follows from properties of languages that can be independently observed.
 
 In this chapter I first introduce the topic of case competition in headless relatives.
 Then I give a brief description of the content and structure of the dissertation.
@@ -12,9 +12,9 @@ Then I give a brief description of the content and structure of the dissertation
 
 \section{Decomposing the title}
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two German sentences in \ref{ex:german-case}. What can descriptively be called the subject of the predicate \tit{mögen} `to like' is marked as nominative. What can be described as the object of \tit{mögen} `to like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner of the noun phrase.
-In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mögen} `to like'.
-In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mögen} `to like'.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two German sentences in \ref{ex:german-case}. What can descriptively be called the subject of the predicate \tit{mögen} `like' is marked as nominative. What can be described as the object of \tit{mögen} `like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner of the noun phrase.
+In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mögen} `like'.
+In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mögen} `like'.
 
 \ex.\label{ex:german-case}
 \ag. Der Lehrer mag den Schüler.\\
@@ -25,9 +25,8 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  `The pupil likes the teacher.' \flushfill{German}\label{ex:german-case-2}
 
 Not only full noun phrases, but also other elements can be marked for case. An example of another element is the relative pronoun. German marks its relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{der} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{nom}' appears in nominative case, because it is the descriptive subject of \tit{mögen} `to like' in the relative clause.
-
-In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{den} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{suchen} `to search' in the relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mögen} `like' in the main clause. The relative pronoun \tit{der} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{nom}' appears in nominative case, because it is the descriptive subject of \tit{mögen} `like' in the relative clause.
+In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mögen} `like' in the main clause. The relative pronoun \tit{den} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{suchen} `search' in the relative clause.
 
 \ex.\label{ex:german-relatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
@@ -40,13 +39,13 @@ In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspi
 Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the descriptive object in the main clause. The relative pronouns do not appear in the same case. The case of the relative pronoun in \ref{ex:german-relative-2} is accusative, because it is the descriptive object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is not accusative but nominative, because it is the descriptive subject in the relative clause. In \ref{ex:german-relative-1}, the case of the relative pronoun (which is nominative) differs from the case of the head (which is accusative).
 
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
-This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing and that it is absent \citep[cf.][]{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero \citep[cf.][]{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Part \ref{part:deriving}.
+This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing and that it is absent \citep[cf.][]{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero \citep[cf.][]{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Part \ref{part:deriving} of the dissertation.
 }
 Even though German also has case competition in headless relatives, I turn to Gothic now. The patterns among the two languages differ slightly, and the first part of the dissertation can be illustrated best with Gothic.
 
 I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}.
 There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
-The predicate \tit{arman} `to pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarman} `to pity' also takes accusative objects, indicated again by the subscript.
+The predicate \tit{arman} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarman} `pity' also takes accusative objects, indicated again by the subscript.
 The relative pronoun \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
@@ -55,37 +54,35 @@ The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Theref
  pity.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.\ac{pres}.1\ac{sg}\scsub{[acc]}\\
  `I pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
-A question that can be raised now is where this accusative case comes from. Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity'.
-
-From now on, I use the terms internal and external case to refer to these two possible case sources.
-Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case that is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arman} `to pity'. The predicate \tit{arman} `to pity' takes accusative objects, so the internal case is accusative.
-External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case that is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarman} `to pity'. The predicate \tit{gaarman} `to pity' takes accusative objects, so the external case is accusative.
-
+A question that can be raised now is where this accusative case comes from. Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `pity' and the predicate in the relative clause \tit{arman} `pity'. Both these predicates take the accusative case. From now on, I use the terms internal and external case to refer to these two possible case sources. In \ref{ex:gothic-acc-acc}, the internal case that comes from \tit{arman} `pity' is accusative, and the external case that comes from \tit{gaarman} `pity' is accusative too.\footnote{
+Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case that is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arman} `pity'. The predicate \tit{arman} `pity' takes accusative objects, so the internal case is accusative.
+External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case that is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarman} `pity'. The predicate \tit{gaarman} `pity' takes accusative objects, so the external case is accusative.
+}
 Coming back to the issue at hand, the accusative case on \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' can be the internal case or the external case (or both).
 Because the internal and the external case in \ref{ex:gothic-acc-acc} match, it is impossible determine what the source of the accusative case is.
 Therefore, in what follows, I give examples in which the internal and external case differ.
-I show that sometimes the relative pronoun appears in the internal case and sometimes it appears in the external case.
+I show that the relative pronoun sometimes appears in the internal case and sometimes in the external case.
 
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
-The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects, as indicated by the subscript on the predicate.
-The external case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects, indicated by the subscript on the predicate.
-The relative pronoun \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative. This accusative can only come from the predicate \tit{frijon} `to love', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The internal case is accusative. The predicate \tit{frijon} `love' takes accusative objects, as indicated by the subscript on the predicate.
+The external case is nominative. The predicate \tit{wisan} `be' takes nominative subjects, indicated by the subscript on the predicate.
+The relative pronoun \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative. This accusative can only come from the predicate \tit{frijon} `love', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
-The conclusion that follows is that it is possible for the relative pronoun to take the internal case. In other words, the relative pronoun is sensitive to the internal case.
+The conclusion that I draw from this is that it is possible for the relative pronoun to take the internal case. In other words, the relative pronoun is sensitive to the internal case.
 At this point it remains unclear what happened to the external nominative case.
 
 Now consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
-The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects, as indicated by the subscript on the predicate.
-The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects, as indicated by the subscript on the predicate.\footnote{
-Throughout this dissertation, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
-For \tit{frijon} `to love' in \ref{ex:gothic-acc-nom} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{wisan} `to be' in \ref{ex:gothic-acc-nom} refers to the case the descriptive subject appears in. A subscript can also refer to the case of the indirect object of a predicate, a possibility that arises in the next chapter.
+The internal case is nominative. The predicate \tit{wisan} `be' takes nominative subjects, as indicated by the subscript on the predicate.
+The external case is accusative. The predicate \tit{ussiggwan} `read' takes accusative objects, as indicated by the subscript on the predicate.\footnote{
+Throughout this dissertation, I place subscripts on the glosses of the predicates in headless relatives. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
+For \tit{frijon} `love' in \ref{ex:gothic-acc-nom} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{wisan} `be' in \ref{ex:gothic-acc-nom} refers to the case the descriptive subject appears in. A subscript can also refer to the case of the indirect object of a predicate, a possibility that arises in the next chapter.
 In other words, the subscript can refer several elements: a subject, direct object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 }
-The relative pronoun \tit{þo} `\tsc{rp}.\ac{sg}.\ac{n}.\ac{acc}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.\footnote{
+The relative pronoun \tit{þo} `\tsc{rp}.\ac{sg}.\ac{n}.\ac{acc}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.\footnote{
 Throughout the dissertation, I write the relative clause in bold when the internal and external case differ. When the relative pronoun takes the internal case, I mark the relative pronoun in bold as well, as shown in \ref{ex:gothic-acc-nom}. When the relative pronoun takes the external case, I do not mark the relative pronoun in bold, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-nom-acc}. When the internal and external case match, I do not mark any part of the sentence in bold, as I did in \ref{ex:gothic-acc-nom}.
 }
 
@@ -93,27 +90,64 @@ Throughout the dissertation, I write the relative clause in bold when the intern
  and \tsc{rp}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
-The conclusion that follows is that it is possible for the relative pronoun to take the external case. In other words, the relative pronoun is sensitive to the external case.
+The conclusion that I draw from this is that it is possible for the relative pronoun to take the external case. In other words, the relative pronoun is sensitive to the external case.
 At this point it remains unclear what happened to the internal nominative case.
 
-The examples in \ref{ex:gothic-acc-nom} and \ref{ex:gothic-nom-acc} show that the relative pronoun in headless relatives can take either the internal or the external case. In both examples, the predicates take either nominative and accusative, and in both cases, the relative pronoun appears in accusative case. In other words, in a case competition between a nominative and an accusative, the accusative wins.
+The examples in \ref{ex:gothic-acc-nom} and \ref{ex:gothic-nom-acc} show that the relative pronoun in headless relatives can take either the internal or the external case. The internal and the external case are nominative and accusative. In other words, \ref{ex:gothic-acc-nom} and \ref{ex:gothic-nom-acc} are both examples in which case competition takes place. In both examples, the relative pronoun appears in accusative case. This means that the accusative wins the case competition between the nominative and the accusative.
 
 
 \section{The content of this dissertation}
 
 In the previous section I introduced the phenomenon of case competition in headless relatives. This dissertation investigates two aspects of it. The first aspect is which case wins the case competition. The second aspect concerns whether the winner of the competition is allows to surface. In this section I give a brief overview of how the content of the dissertation is structured.
 
-Part \ref{part:case-facts} of this dissertation discusses the first aspect that plays a role in case competition in headless relatives. This aspect concerns which case wins the case competition. It is a crosslinguistically stable fact that this is determined by the case scale in \ref{ex:case-scale-content} \citep[cf.][]{grosu1994}.
+Part \ref{part:case-facts} of this dissertation discusses the first aspect I just introduced, which concerns which case wins the case competition. It is a crosslinguistically stable fact that this is determined by the case scale in \ref{ex:case-scale-content} \citep[cf.][]{grosu1994}.
 
 \ex.\label{ex:case-scale-content} \tsc{nom} < \tsc{acc} < \tsc{dat}
 
 A case more to the right on the scale wins over a case more to the left on the scale.
 
-The case scale in \ref{ex:case-scale-content} generates the pattern shown in Table \ref{tbl:case-competition-cases}. The left column shows the internal case (\ac{int}) between square brackets. The top row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The table shows three different instances of case competition and their winners: (1) when the accusative competes against the nominative, the accusative wins, and the relative pronoun appears in the accusative case; (2) when the dative competes against the nominative, the dative wins, and the relative pronoun appears in the dative case; and (3) when the dative competes against the accusative, the dative wins, and the relative pronoun appears in the dative case.
+The case scale in \ref{ex:case-scale-content} generates the pattern shown in Table \ref{tbl:case-competition-cases}.
 
 \begin{table}[ht]
   \center
-  \caption{The winner of case competition}
+  \caption{The winner of the case competition}
+  \begin{tabular}{c|c|c|c}
+    \toprule
+    \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+           & [\ac{nom}]
+           & [\ac{acc}]
+           & [\tsc{dat}]
+           \\ \cmidrule{1-4}
+       [\ac{nom}]
+           & \ac{nom}
+           & {\ac{acc}}
+           & {\tsc{dat}}
+           \\ \cmidrule{1-4}
+       [\ac{acc}]
+           & {\ac{acc}}
+           & \ac{acc}
+           & {\tsc{dat}}
+           \\ \cmidrule{1-4}
+       [\ac{dat}]
+           & {\tsc{dat}}
+           & {\tsc{dat}}
+           & \tsc{dat}
+           \\
+     \bottomrule
+  \end{tabular}
+    \label{tbl:case-competition-cases}
+\end{table}
+
+The left column shows the internal case (\ac{int}) between square brackets. The top row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The table shows three different instances of case competition and their winners: (1) when the accusative competes against the nominative, the accusative wins, and the relative pronoun appears in the accusative case; (2) when the dative competes against the nominative, the dative wins, and the relative pronoun appears in the dative case; and (3) when the dative competes against the accusative, the dative wins, and the relative pronoun appears in the dative case.
+
+In Chapter \ref{ch:recurring}, I give examples that illustrate the pattern shown in Table \ref{tbl:case-competition-cases}. Additionally, I show that the \tsc{nom} < \tsc{acc} < \tsc{dat} scale is a recurring one. The pattern does not only appear in headless relatives, but also in morphological phenomena.
+In Chapter \ref{ch:decomposition}, I argue that there is a single trigger that is responsible for the case scales in different subparts of language. This trigger is a cumulative case decomposition \citep{caha2009}. Informally speaking, cases more on the right on the case scale or syntactically more complex than cases more to the left on the case scale. I show how the case scale in headless relatives is a reflex of this decomposition.
+
+Part \ref{part:variation} of this dissertation introduces the second aspect that plays a role in case competition headless relatives. This aspect concerns whether the internal and the external case are allowed to surface when either of them wins the case competition. Consider Table \ref{tbl:case-competition-cases-colors}.
+
+\begin{table}[ht]
+  \center
+  \caption{The winner of the case competition (\tsc{int}/\tsc{ext} marked)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
@@ -138,28 +172,26 @@ The case scale in \ref{ex:case-scale-content} generates the pattern shown in Tab
            \\
      \bottomrule
   \end{tabular}
-    \label{tbl:case-competition-cases}
+    \label{tbl:case-competition-cases-colors}
 \end{table}
 
-In Chapter \ref{ch:recurring}, I give examples that illustrate the pattern shown in Table \ref{tbl:case-competition-cases}. Additionally, I show that the \tsc{nom} < \tsc{acc} < \tsc{dat} scale is a recurring one. The pattern does not only appear in headless relatives, but also in other syntactic and morphological phenomena.
-In Chapter \ref{ch:decomposition}, I argue that there is a single trigger that is responsible for the case scales in different subparts of language. This trigger is a cumulative case decomposition \citep{caha2009}. Informally speaking, cases more on the right on the case scale or syntactically more complex than cases more to the left on the case scale. I show how the case scale in headless relatives is a reflex of this decomposition.
-
-Part \ref{part:variation} of this dissertation introduces the second aspect that plays a role in case competition headless relatives. This aspect concerns whether the internal and the external case are allowed to surface when either of them wins the case competition. In Table \ref{tbl:case-competition-cases}, the light gray cells are the ones in which the internal case wins, the dark gray cells are the ones in which the external case wins, and the unmarked cells are the ones in which both cases match. It differs across languages whether they allow different winners to surface.
+In Table \ref{tbl:case-competition-cases-colors}, the light gray cells are the ones in which the internal case wins, the dark gray cells are the ones in which the external case wins, and the unmarked cells are the ones in which both cases match. It differs across languages whether they allow different winners to surface.
 
 There are four logically possible language types. The first possible type is one in which the internal and the external case are allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked, light gray and dark gray cells are grammatical. I call this type the unrestricted type. The second possible type is one in which only the internal case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and light gray cells are grammatical but those in the dark gray cells are not. I call this type the internal-only type. The third possible type is one in which only the external case is allowed to surface when it wins the case competition. Relative pronouns in the unmarked and the dark gray cells are grammatical but those in the light gray cells are not. I call this type the external-only type. The fourth possible type is one in which neither the internal case nor in the external case is allowed to surface when either of them wins the case competition. Relative pronouns in the unmarked cells are grammatical, but those in the light and dark gray cells are not. I call this type the matching type.
 
-Chapter \ref{ch:typology} introduces these possible patterns in more detail and gives examples of them in different languages. As far as I am aware, only three of the possible language types are attested in natural languages. Gothic and Old High German are examples of the unrestricted type, Modern German is an example of the internal-only type \citep{vogel2001}, and Polish is an example of the matching type \citep{citko2013}. To my knowledge, the external-only type is not attested.
+Chapter \ref{ch:typology} introduces these possible patterns in more detail and gives examples of them in different languages. As far as I am aware, only three of the possible language types are attested in natural languages. Gothic, Old High German and Ancient Greek are examples of the unrestricted type, Modern German is an example of the internal-only type \citep{vogel2001}, and Polish is an example of the matching type \citep{citko2013}. To my knowledge, the external-only type is not attested.
 Chapter \ref{ch:without-case-competition} takes a small detour and discusses languages that do not show any case competition. I present an overview of all logically possible patterns in headless relatives across languages, and I show which ones are attested.
 
-In Part \ref{part:deriving} I focus again on the different language types that involve case competition. The goal of this part is to provide an account that generates the attested language types and excludes the non-attested one. Additionally, the variation between the language types should follow from properties that can be independently observed within a language of a particular language type.
+In Part \ref{part:deriving} I focus again on the different language types that involve case competition. The goal of this part is to provide an account that generates the attested language types and excludes the non-attested one. Additionally, the variation between the language types should follow from properties that can be independently observed in a language of a particular language type.
 
-In my account, headless relatives are derived from light-headed relatives. These light-headed relatives contain a light head and a relative pronoun. Relative pronouns and light heads partly overlap in feature content with the relative pronoun. In a headless relative either the light head or the relative pronoun is deleted. The necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) is structurally or formally contained within the other element.
-The difference between languages arises from languages having different lexical entries that spell out the features of the light head and the relative pronoun. These different lexical entries ultimately lead to different languages types.
+In my account, headless relatives are derived from light-headed relatives. These light-headed relatives contain a light head and a relative pronoun. In a headless relative either the light head or the relative pronoun is deleted. The necessary requirement for deletion is that the deleted element is contained within the other element.
+The difference between languages arises from languages having different lexical entries that spell out the features of the light head and the relative pronoun.
+The lexical entries are motivated by investigating the morphology of the languages. As a result, different lexical entries ultimately lead to different languages types.
 
-I describe this basic setup of my proposal in Chapter \ref{ch:the-basic-idea}, and I show how a different lexical entries ultimately generate the three attested language types and not the unattested one.
+I describe the basic setup of my proposal in Chapter \ref{ch:the-basic-idea}, and I show how a different lexical entries ultimately generate the three attested language types and not the unattested one.
 In Chapter \ref{ch:deriving-onlyinternal}, I motivate the analysis for the internal-only type of language Modern German. I first identify the morphemes that Modern German light heads and relative pronouns consist of. Then I show which features each of the morphemes correspond to. I illustrate that the lexical entries in Modern German are such that they lead Modern German to be an internal-only type of language.
 In Chapter \ref{ch:deriving-matching} and \ref{ch:deriving-unrestricted} I do the same for the two other attested language types. I show that Polish has lexical entries that ultimately lead it to be a matching type of language, and that Old High German has lexical entries that ultimately lead it to be an unrestricted type of language.
-Toward the end of the chapter I briefly sketch what I assume the larger syntactic structure of a headless relative looks like.
+Toward the end of the chapter I briefly sketch what I assume to be the larger syntactic structure of a headless relative.
 Chapter \ref{ch:discussion} concludes.
 
 % \subsection{Case attraction}\label{sec:attraction}
